# serializer version: 1
# name: TestOscillatorComplicated.test_reset
  3.8697802427798167
# ---
# name: TestOscillatorComplicated.test_reset.1
  2.1943921987602617
# ---
# name: TestOscillatorComplicated.test_reset.10
  dict({
    'reference': 8.0,
    'reference_constraint_error': -19.52911326056175,
    'reference_constraint_position': 20.0,
    'reference_constraint_violated': False,
    'reference_error': -7.529113260561752,
    'state_of_interest': 0.47088673943824766,
  })
# ---
# name: TestOscillatorComplicated.test_reset.2
  4.292989599556912
# ---
# name: TestOscillatorComplicated.test_reset.3
  3.4868401452968194
# ---
# name: TestOscillatorComplicated.test_reset.4
  0.47088673943824766
# ---
# name: TestOscillatorComplicated.test_reset.5
  4.878111758183779
# ---
# name: TestOscillatorComplicated.test_reset.6
  3.805698509951765
# ---
# name: TestOscillatorComplicated.test_reset.7
  3.930321526384769
# ---
# name: TestOscillatorComplicated.test_reset.8
  8.0
# ---
# name: TestOscillatorComplicated.test_reset.9
  -7.529113260561752
# ---
# name: TestOscillatorComplicated.test_step
  6.087455541244575
# ---
# name: TestOscillatorComplicated.test_step.1
  2.541687540355613
# ---
# name: TestOscillatorComplicated.test_step.10
  51.2380654736653
# ---
# name: TestOscillatorComplicated.test_step.11
  False
# ---
# name: TestOscillatorComplicated.test_step.12
  False
# ---
# name: TestOscillatorComplicated.test_step.13
  dict({
    'reference': 8.219875313546899,
    'reference_constraint_error': -18.938201626083277,
    'reference_constraint_position': 20.0,
    'reference_constraint_violated': False,
    'reference_error': -7.158076939630176,
    'state_of_interest': 1.0617983739167234,
  })
# ---
# name: TestOscillatorComplicated.test_step.14
  1.139080931751879
# ---
# name: TestOscillatorComplicated.test_step.15
  7.643327224435085
# ---
# name: TestOscillatorComplicated.test_step.16
  8.770023692875586
# ---
# name: TestOscillatorComplicated.test_step.17
  7.149056015353484
# ---
# name: TestOscillatorComplicated.test_step.18
  1.972083358080852
# ---
# name: TestOscillatorComplicated.test_step.19
  5.047006142681629
# ---
# name: TestOscillatorComplicated.test_step.2
  7.256617066092945
# ---
# name: TestOscillatorComplicated.test_step.20
  5.169439569741611
# ---
# name: TestOscillatorComplicated.test_step.21
  4.798206919670843
# ---
# name: TestOscillatorComplicated.test_step.22
  8.439533636705194
# ---
# name: TestOscillatorComplicated.test_step.23
  -6.467450278624343
# ---
# name: TestOscillatorComplicated.test_step.24
  41.827913106478086
# ---
# name: TestOscillatorComplicated.test_step.25
  False
# ---
# name: TestOscillatorComplicated.test_step.26
  False
# ---
# name: TestOscillatorComplicated.test_step.27
  dict({
    'reference': 8.439533636705194,
    'reference_constraint_error': -18.02791664191915,
    'reference_constraint_position': 20.0,
    'reference_constraint_violated': False,
    'reference_error': -6.467450278624343,
    'state_of_interest': 1.972083358080852,
  })
# ---
# name: TestOscillatorComplicated.test_step.28
  0.0
# ---
# name: TestOscillatorComplicated.test_step.29
  6.251511988275885
# ---
# name: TestOscillatorComplicated.test_step.3
  5.005962881903876
# ---
# name: TestOscillatorComplicated.test_step.30
  6.135240746499774
# ---
# name: TestOscillatorComplicated.test_step.31
  10.330570533462584
# ---
# name: TestOscillatorComplicated.test_step.32
  2.0360113056763014
# ---
# name: TestOscillatorComplicated.test_step.33
  5.967118130030345
# ---
# name: TestOscillatorComplicated.test_step.34
  6.262476986417208
# ---
# name: TestOscillatorComplicated.test_step.35
  5.65416346694715
# ---
# name: TestOscillatorComplicated.test_step.36
  8.6587581932296
# ---
# name: TestOscillatorComplicated.test_step.37
  -6.622746887553299
# ---
# name: TestOscillatorComplicated.test_step.38
  43.860776336596906
# ---
# name: TestOscillatorComplicated.test_step.39
  False
# ---
# name: TestOscillatorComplicated.test_step.4
  1.0617983739167234
# ---
# name: TestOscillatorComplicated.test_step.40
  False
# ---
# name: TestOscillatorComplicated.test_step.41
  dict({
    'reference': 8.6587581932296,
    'reference_constraint_error': -17.9639886943237,
    'reference_constraint_position': 20.0,
    'reference_constraint_violated': False,
    'reference_error': -6.622746887553299,
    'state_of_interest': 2.0360113056763014,
  })
# ---
# name: TestOscillatorComplicated.test_step.42
  1.4871808075434318
# ---
# name: TestOscillatorComplicated.test_step.43
  8.789847065819913
# ---
# name: TestOscillatorComplicated.test_step.44
  4.63145230142228
# ---
# name: TestOscillatorComplicated.test_step.45
  5.989849036301869
# ---
# name: TestOscillatorComplicated.test_step.46
  1.9138506273357234
# ---
# name: TestOscillatorComplicated.test_step.47
  6.609332960352666
# ---
# name: TestOscillatorComplicated.test_step.48
  6.868366886672139
# ---
# name: TestOscillatorComplicated.test_step.49
  6.967804944284334
# ---
# name: TestOscillatorComplicated.test_step.5
  4.9365278044943945
# ---
# name: TestOscillatorComplicated.test_step.50
  8.877332634950129
# ---
# name: TestOscillatorComplicated.test_step.51
  -6.963482007614406
# ---
# name: TestOscillatorComplicated.test_step.52
  48.490081670369555
# ---
# name: TestOscillatorComplicated.test_step.53
  False
# ---
# name: TestOscillatorComplicated.test_step.54
  False
# ---
# name: TestOscillatorComplicated.test_step.55
  dict({
    'reference': 8.877332634950129,
    'reference_constraint_error': -18.086149372664277,
    'reference_constraint_position': 20.0,
    'reference_constraint_violated': False,
    'reference_error': -6.963482007614406,
    'state_of_interest': 1.9138506273357234,
  })
# ---
# name: TestOscillatorComplicated.test_step.56
  1.8273701647910303
# ---
# name: TestOscillatorComplicated.test_step.57
  3.3647837737494335
# ---
# name: TestOscillatorComplicated.test_step.58
  7.202539228614338
# ---
# name: TestOscillatorComplicated.test_step.59
  6.381329798471056
# ---
# name: TestOscillatorComplicated.test_step.6
  4.264234935283765
# ---
# name: TestOscillatorComplicated.test_step.60
  2.0369685189025293
# ---
# name: TestOscillatorComplicated.test_step.61
  7.619148513262692
# ---
# name: TestOscillatorComplicated.test_step.62
  7.197297241699376
# ---
# name: TestOscillatorComplicated.test_step.63
  7.508112493435574
# ---
# name: TestOscillatorComplicated.test_step.64
  9.095041255281616
# ---
# name: TestOscillatorComplicated.test_step.65
  -7.058072736379087
# ---
# name: TestOscillatorComplicated.test_step.66
  49.81639075201777
# ---
# name: TestOscillatorComplicated.test_step.67
  False
# ---
# name: TestOscillatorComplicated.test_step.68
  False
# ---
# name: TestOscillatorComplicated.test_step.69
  dict({
    'reference': 9.095041255281616,
    'reference_constraint_error': -17.96303148109747,
    'reference_constraint_position': 20.0,
    'reference_constraint_violated': False,
    'reference_error': -7.058072736379087,
    'state_of_interest': 2.0369685189025293,
  })
# ---
# name: TestOscillatorComplicated.test_step.7
  4.252396658049173
# ---
# name: TestOscillatorComplicated.test_step.8
  8.219875313546899
# ---
# name: TestOscillatorComplicated.test_step.9
  -7.158076939630176
# ---
